@@ -3,6 +3,7 @@ releases are sorted from youngest to oldest.
 
 version <next>:
 - compand audio filter
+- shuffleplanes filter
 
 
 version 10:
